--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi banda de musica favorita</title>
+    <title>Mi banda musical favorita</title>
     <link rel="stylesheet" href="css/styele.css">
 </head>
 <body>
